force-app/main/default/objects/Foreign_Exchange__x/Foreign_Exchange__x.object-meta.xml
<CustomObject>
    <description>Foreign Currency Exchange external object</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>ForeignExchange</externalName>
    <label>Foreign Currency</label>
    <pluralLabel>Foreign Currencies</pluralLabel>
</CustomObject>