force-app/main/default/objects/Foreign_Exchange__x/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Currency ISO Code</description>
    <externalDeveloperName>Currency</externalDeveloperName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>