force-app/main/default/objects/Foreign_Exchange__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Customer lookup</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>150</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Foreign Currency Accounts</relationshipLabel>
    <relationshipName>Foreign_Currency_Accounts</relationshipName>
    <type>IndirectLookup</type>
</CustomField>