force-app/main/default/objects/Foreign_Exchange__x/fields/Mid_ANZ_Customer__c.field-meta.xml
<CustomField>
    <fullName>Mid_ANZ_Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Mid ANZ Customer Id</description>
    <externalDeveloperName>MidANZCustomer</externalDeveloperName>
    <label>Mid ANZ Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>