force-app/main/default/objects/Foreign_Exchange__x/fields/Source_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Source System Status</description>
    <externalDeveloperName>SourceSystemStatus</externalDeveloperName>
    <label>Source System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>